--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ i {
         background-position: 68% 90%;
     }
   }
-  @media only screen and (max-width: 800px) {
+  /*@media only screen and (max-width: 800px) {
     .quote {
         padding-top: 40%;
     }
