--- a/css/styles.css
+++ b/css/styles.css
@@ -94,9 +94,10 @@ i {
         background-position: 68% 90%;
     }
   }
-  /*@media only screen and (max-width: 800px) {
+  @media only screen and (max-width: 800px) {
     .quote {
-        padding-top: 40%;
+        padding-top: 20%;
+        padding-bottom: 20%;
     }
   } 
 
